// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnotherExample when name prop is defined renders correctly 1`] = `
<div
  className="another-example"
>
  This is another example by
  Some Name
</div>
`;

exports[`AnotherExample when name prop is not defined renders correctly 1`] = `
<div
  className="another-example"
>
  This is another example by
  jaebaebae
</div>
`;
